--- a/source/static/main.css
+++ b/source/static/main.css
@@ -86,7 +86,7 @@ body {
   .form_wrapper .textarea_field > span > i {
     padding-top: 10px;
   }
-  .form_wrapper input[type=text], .form_wrapper input[type=number], .form_wrapper input[type=number] {
+  .form_wrapper input[type=text], .form_wrapper input[type=number], .form_wrapper input[type=email],.form_wrapper input[type=password] {
     width: 100%;
     padding: 8px 10px 9px 35px;
     height: 35px;
@@ -98,10 +98,10 @@ body {
     -ms-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
-  .form_wrapper input[type=text]:hover, .form_wrapper input[type=number]:hover, .form_wrapper input[type=number]:hover {
+  .form_wrapper input[type=text]:hover, .form_wrapper input[type=number]:hover, .form_wrapper input[type=number]:hover, .form_wrapper input[type=email]:hover,.form_wrapper input[type=password]:hover {
     background: #fafafa;
   }
-  .form_wrapper input[type=text]:focus, .form_wrapper input[type=number]:focus, .form_wrapper input[type=number]:focus {
+  .form_wrapper input[type=text]:focus, .form_wrapper input[type=number]:focus, .form_wrapper input[type=number]:focus, .form_wrapper input[type=email]:focus,.form_wrapper input[type=password]:focus {
     -webkit-box-shadow: 0 0 2px 1px rgba(255, 169, 0, 0.5);
     -moz-box-shadow: 0 0 2px 1px rgba(255, 169, 0, 0.5);
     box-shadow: 0 0 2px 1px rgba(255, 169, 0, 0.5);
