--- a/source/templates/createAccount.html
+++ b/source/templates/createAccount.html
@@ -23,7 +23,7 @@
                   <input type="password" name="password" placeholder="Your Password" required />
                  </div>
                  <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
-                  <input type="password" name="cpassword" placeholder="Please reenter your Password" required />
+                  <input type="password" name="cpassword" placeholder="Please re-enter your Password" required />
                  </div>
                  <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                   <input type="text" name="organization" id="organization" placeholder="Your Organization (where applicable)"  />
