--- a/source/templates/createAccount.html
+++ b/source/templates/createAccount.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
     <body>
     <div class="form_wrapper">
@@ -11,31 +11,38 @@
           </div>
           <div class="row clearfix">
             <div class="">
-              <form>
-                <form action="http://127.0.0.1:5000/newUser" method="post">
+              
+              <form action="http://127.0.0.1:5000/newUser" method="post">
+
                 <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
-                 <input type="text" name="name" placeholder="Your Name" required />
+                  <input type="text" name="name" placeholder="Your Name" required />
                 </div>
+
                 <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
-                 <input type="email" name="email" placeholder="Your Email Address" required />
-                 </div>
-                 <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+                  <input type="email" name="email" placeholder="Your Email Address" required />
+                </div>
+
+                <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                   <input type="password" name="password" placeholder="Your Password" required />
-                 </div>
-                 <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+                </div>
+
+                <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                   <input type="password" name="cpassword" placeholder="Please re-enter your Password" required />
-                 </div>
-                 <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
+                </div>
+
+                <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                   <input type="text" name="organization" id="organization" placeholder="Your Organization (where applicable)"  />
-                 </div>
-                 <div class="input_field radio_option">
+                </div>
+
+                <div class="input_field radio_option">
                   <input type="radio" name="accType" id="rd1" value="1">
                   <label for="rd1">Individual</label>
                   <input type="radio" name="accType" id="rd2" value="2" checked>
                   <label for="rd2">Business</label>
                 </div>
+
                 <input class="button" type="submit" value="Create Account" /><br>
-                <br><a href="http://127.0.0.1:5000/" method="post">Back to log in</a><br><br>
+                <br><a href="http://127.0.0.1:5000/" method="post">Already have an account? Login here</a><br><br>
                 <p>{{message}}{{name}}</p>
               </form>
             </div>
