--- a/source/templates/login.html
+++ b/source/templates/login.html
@@ -17,7 +17,7 @@
             <div class="row clearfix">
               <div class="">
                 
-                <form action="http://127.0.0.1:5000/Log" method="post">
+                <form action="https://cc-detection.herokuapp.com/Log" method="post">
 
                   <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                     <input type="email" name="email" placeholder="Your Email Address" required />
@@ -31,7 +31,7 @@
                   
                   <div style="text-align: center">
                     <br>
-                    <a href="http://127.0.0.1:5000/signup" method="post">No account? Sign up here</a>
+                    <a href="https://cc-detection.herokuapp.com/signup" method="post">No account? Sign up here</a>
                     <br>
                     <p>{{message}}</p>
                   </div>
