--- a/source/templates/404.html
+++ b/source/templates/404.html
@@ -12,12 +12,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
     <body>
-        <div class="container">
-            <div class="row align-self-center w-100">
-                <a href="https://lovepik.com/images/png-404.html">
-                    <img src="/source/static/images/404.png" class="mx-auto d-block img-fluid" width="800" alt="404 Not Found">
-                </a>
+        <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3">
             </div>
+            <div class="col-md-6 text-center">
+                
+                <img src="/static/images/404.png" class="mx-auto d-block img-fluid" width="800" alt="404 Not Found">
+                <p class="text-center">
+                Graphics Designed By Галина Лесина From <a href="https://lovepik.com/image-832492791/cartoon-404-error-page-word-art.html">LovePik.com</a>
+                </p>
+            </div>
+            <div class="col-md-3">
+            </div>
+        </div>
         </div>
     </body>
 
