--- a/source/templates/createAccount.html
+++ b/source/templates/createAccount.html
@@ -12,7 +12,7 @@
           <div class="row clearfix">
             <div class="">
               
-              <form action="https://cc-detection.herokuapp.com/newUser" method="post">
+              <form action="{{ url_for('newUser') }}" method="post">
 
                 <div class="input_field"> <span><i aria-hidden="true" class="fa fa-envelope"></i></span>
                   <input type="text" name="name" placeholder="Your Name" required />
@@ -42,7 +42,7 @@
                 </div>
 
                 <input class="button" type="submit" value="Create Account" /><br>
-                <br><a href="https://cc-detection.herokuapp.com/" method="post">Already have an account? Login here</a><br><br>
+                <br><a href={{ url_for('login') }} method="post">Already have an account? Login here</a><br><br>
                 <p>{{message}}{{name}}</p>
               </form>
             </div>
