--- a/source/templates/login.html
+++ b/source/templates/login.html
@@ -31,7 +31,7 @@
                   
                   <div style="text-align: center">
                     <br>
-                    <a href="https://cc-detection.herokuapp.com/signup" method="post">No account? Sign up here</a>
+                    <a href="{{ url_for('signup') }}" method="post">No account? Sign up here</a>
                     <br>
                     <p>{{message}}</p>
                   </div>
