--- a/source/templates/login.html
+++ b/source/templates/login.html
@@ -17,7 +17,7 @@
             <div class="row clearfix">
               <div class="">
                 
-                <form action="{{ url_for('verify') }}" method="post">
+                <form action="{{ url_for('verifyUser') }}" method="post">
 
                   <div class="input_field"> <span><i aria-hidden="true" class="fa fa-user"></i></span>
                     <input type="email" name="email" placeholder="Your Email Address" required />
