--- a/source/templates/default_prediction.html
+++ b/source/templates/default_prediction.html
@@ -164,7 +164,11 @@
       </div>
       </div>
       </div>
-
+      <div>
+        
+        <img src="{{ image }}"/>
+      
+      </div>
   </body>
   </html>
  
