--- a/source/templates/createAccount.html
+++ b/source/templates/createAccount.html
@@ -39,9 +39,9 @@
                 </div>
 
                 <div class="input_field radio_option">
-                  <input type="radio" name="accType" id="rd1" value="1">
+                  <input type="radio" name="accType" id="rd1" value="Individual">
                   <label for="rd1">Individual</label>
-                  <input type="radio" name="accType" id="rd2" value="2" checked>
+                  <input type="radio" name="accType" id="rd2" value="Business" checked>
                   <label for="rd2">Business</label>
                 </div>
 
