--- a/source/templates/default_prediction.html
+++ b/source/templates/default_prediction.html
@@ -155,14 +155,14 @@
       </div>
       <div class="row align-self-center w-100">
         <div class="col-10 mx-auto">
-            <div calss="table table-responsive">
+            <div class="table table-responsive">
                 <table>
                   {% block content %}
                   {{predicted_table | safe}}
                   {% endblock %}
                 </table>
-      </div>
-      </div>
+            </div>
+        </div>
       </div>
       <div>
         
