--- a/source/templates/default_prediction.html
+++ b/source/templates/default_prediction.html
@@ -5,9 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap4.min.css" />
+ 
+ <!-- <script>
+    $(document).ready(function() {
+      $('#predicted_table').DataTable({
+        "scorllX": true,
+        "scrollY": 200,
+      });
+      $('.dataTables_length').addClass('bs-select');
+    });
+    
+  </script> -->
+  <script>
+    $(document).ready(function() {
+      $('#predicted_table').DataTable({
+        "scorllX": true,
+        "scrollY": 400
+        
+       
+        
+      });
+      $('.dataTables_length').addClass('bs-select');
+    });
+    
+  </script>
+  <!--<script type='text/javascript'>
+    window.onload = function() {
+      const thead = document.querySelectorAll('.table > thead');
+      thead.forEach(e => e.classList.add('thead-light'));
+    }
+  </script>-->
   <style>
     /*  .login-form {
        width : 350px;
@@ -23,7 +53,7 @@
          margin : 0 0 15px;
      }
      .form-control, .btn{
-         min-height : 38px;
+         min-height : 25px;
          border-radius : 3px;
          
      }
@@ -33,7 +63,7 @@
          
      }
      .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
-          background-color:#4B0082 !important;
+         /* background-color:#4B0082 !important;*/
           border:0px;
       }
      .navbar {
@@ -44,14 +74,17 @@
    /* Remove the jumbotron's default bottom margin */ 
     .jumbotron {
      margin-bottom: 0;
-     
+     background-image : url('/static/images/creditcard.jpg');
      background-size: cover;
+     
    }
    /* rgb(213,205,214) */
-   .jumbotron, .h1{
-       color: #4B0082
+    .jumbotron, .h1{
+      /* color: #4B0082*/
    }
-  
+   .jumbo_text {
+    color: white;
+    }
    /* Add a gray background color and some padding to the footer */
    footer {
      background-color: #f2f2f2;
@@ -65,7 +98,7 @@
       
    .navbar-light .navbar-nav .nav-link{
        font-size: 15px;
-       color: #4B0082;
+       /*color: #4B0082;*/
        
    }
    input.transparent-input{
@@ -74,31 +107,60 @@
    }
 
    .jumbotron .jumbotron-custom{
-       background-color:rgba(0,0,0,0,3) !important ;
+       /*background-color:rgba(0,0,0,0,3) !important ;*/
+        background-image : url('/static/images/creditcard.jpg');
         background-size: cover;
    }
-   .dtHorizontalVerticalWrapper {
-      max-width: 600px;
-      margin: 0 auto;
-      }
-      #dtHorizontalVertical th, td {
-      white-space: nowrap;
-      }
-      table.dataTable thead .sorting:after,
-      table.dataTable thead .sorting:before,
-      table.dataTable thead .sorting_asc:after,
-      table.dataTable thead .sorting_asc:before,
-      table.dataTable thead .sorting_asc_disabled:after,
-      table.dataTable thead .sorting_asc_disabled:before,
-      table.dataTable thead .sorting_desc:after,
-      table.dataTable thead .sorting_desc:before,
-      table.dataTable thead .sorting_desc_disabled:after,
-      table.dataTable thead .sorting_desc_disabled:before {
-      bottom: .5em;
-      }
+  
+  table.dataTable thead .sorting:after,
+  table.dataTable thead .sorting:before,
+  table.dataTable thead .sorting_asc:after,
+  table.dataTable thead .sorting_asc:before,
+  table.dataTable thead .sorting_asc_disabled:after,
+  table.dataTable thead .sorting_asc_disabled:before,
+  table.dataTable thead .sorting_desc:after,
+  table.dataTable thead .sorting_desc:before,
+  table.dataTable thead .sorting_desc_disabled:after,
+  table.dataTable thead .sorting_desc_disabled:before {
+  bottom: .5em;
+}
+   
+  .table-fixed tbody {
+    height: 300px;
+    
+    width: 100%;
+}
+  .table-fixed thead,
+  .table-fixed tbody{
+    display: block;
+  }
+  .table-fixed thead th,
+  .table-fixed tbody td,
+  .table-fixed tbody tr{
+    width: 20%;
+  }
 
+
+  body {
+      background: #bdc3c7;
+      background: -webkit-linear-gradient(to right, #bdc3c7, #d8e1eb);
+      background: linear-gradient(to right, #bdc3c7, #d8e1eb);
+      min-height: 100vh;
+
+  }
+/*background: #74ebd5;
+      background: -webkit-linear-gradient(to right, #74ebd5, #ACB6E5);
+      background: linear-gradient(to right, #74ebd5, #ACB6E5);
+      min-height: 100vh;*/
 </style> 
-
+<!--
+&::after {
+      content: '';
+      clear: both;
+      display: block;
+  }
+overflow-y: auto;
+    overflow-x: auto;-->
 <head>
 
   
@@ -106,6 +168,7 @@
  
   </head>
   <body>
+ 
     <div>
       <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
           <div class="container-fluid">
@@ -131,16 +194,19 @@
                                       </td>
                                       <td>
                                           <div class ="form-group">
-                                          <input type ="submit" class="btn btn-primary btn-block" name="Predict">
+                                          <button type ="submit" class="btn btn-primary btn-block" name="Predict">Predict</button>
+
                                       </div>
                                       </td>
                                   </tr>
-                                  <tr>
-                                    <td>
-                                      {{f_name}}
-                                    </td>
-                                    <td><a href= "{{url_for('download_file', filename=f_name)}}" class="btn btn-primary btn-block" name ="Download">Download</a></td>
-                                  </tr>
+                                  {% if show_table %}
+                                    <tr>
+                                      <td>
+                                        {{f_name}}
+                                      </td>
+                                      <td><a href= "{{url_for('download_file', filename=f_name)}}" class="btn btn-primary btn-block" name ="Download">Download</a></td>
+                                    </tr>
+                                  {% endif %}
                                 </table>
                               </div>
                       </div>
@@ -148,23 +214,51 @@
                   </div>
                 </div>
               </div>
-             
-            
-          
+
           </form>
       </div>
-      <div class="row align-self-center w-100">
-        <div class="col-10 mx-auto">
-            <div calss="table table-responsive">
-                <table>
-                  {% block content %}
-                  {{predicted_table | safe}}
-                  {% endblock %}
-                </table>
-      </div>
-      </div>
-      </div>
+      {% if show_table %}
+      <div class="container py-10">
+        <div class="row">
+            <div class="col-lg-10 mx-auto bg-white rounded shadow">
 
+                <!-- Fixed header table-->
+               
+                <div class="table-responsive">
+                    <table id="predicted_table" class="table table-striped table-bordered table-sm" cellspacing="0", width="100%">
+                      <thead>
+                        <tr>
+                            <th  class="th-sm">Id</th>
+                            <th  class="th-sm">Age</th>
+                            <th  class="th-sm">Bill Amount1</th>
+                            <th  class="th-sm">Limit Balance</th>
+                            <th  class="th-sm">Default</th>
+                            <th  class="th-sm">probability</th>
+                        </tr>
+                    </thead>
+                        
+                        <tbody>
+                          
+                            {% for index, row in table.iterrows() %}
+                              <tr>
+                                  <td >{{row['ID']}}</td>
+                                  <td>{{row['AGE']}}</td>
+                                  <td>{{row['BILL_AMT1']}}</td>
+                                  <td>{{row['LIMIT_BAL']}}</td>
+                                  <td>{{row['default payment prediction']}}</td>
+                                  <td>{{row['probability']}}</td>
+                              </tr>
+                              {% endfor %}
+                            
+                        </tbody>
+                       
+                    </table>
+                </div>
+               
+      </div>
+      </div>
+      </div>
+      {% endif %}
   </body>
   </html>
  
