--- a/source/templates/Main.html
+++ b/source/templates/Main.html
@@ -11,7 +11,8 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-      
+      <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap4.min.css" />
 </head>
 
 <body>
@@ -21,18 +22,40 @@
                   <p>A Machine Learning Model Approach</p>
                   
             </div>
+
             <div class="row align-self-center w-100">
                   <div class="col-8">
-                  <input class="form-control" id="myInput" type="text" placeholder="Search..">
-                  <br>
-                  
-                        <div class="table table-responsive tableFixHead">
-                              {% block content %}
-                              {{ table | safe}}
-                              {% endblock %}
-
-                        </div>
-                  
+              
+                  {% if show_table %}
+                      <table id="predicted_table" class="table  table-striped table-bordered table-sm" cellspacing="0", width="100%">
+                        <thead>
+                          <tr>
+                              <th  class="th-sm">Id</th>
+                              <th  class="th-sm">Age</th>
+                              <th  class="th-sm">Bill Amount1</th>
+                              <th  class="th-sm">Limit Balance</th>
+                              <th  class="th-sm">Default</th>
+                              <th  class="th-sm">probability</th>
+                          </tr>
+                      </thead>
+                          
+                          <tbody>
+                            
+                              {% for index, row in table.iterrows() %}
+                                <tr>
+                                    <td >{{row['ID']}}</td>
+                                    <td>{{row['AGE']}}</td>
+                                    <td>{{row['BILL_AMT1']}}</td>
+                                    <td>{{row['LIMIT_BAL']}}</td>
+                                    <td>{{row['default_result']}}</td>
+                                    <td>{{row['probability']}}</td>
+                                </tr>
+                                {% endfor %}
+                              
+                          </tbody>
+                        
+                      </table>
+                    {% endif %}
                   </div>
                   
                         
@@ -51,26 +74,50 @@
                         
                   </form>
                   <hr>
-                  <div class="card">
-                        <div class="card-body display-2 text-center">{{ records }}</div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                        <div class="card-body">
-                              <img src="{{ image }}" class="img-fluid mx-auto"/>
-                        </div>
-                  </div>
-                  <hr>
-                  <form action="{{url_for('download_file', filename=f_name)}}" method = "GET">
-                        <button type="submit" class="btn btn-primary btn-block">Download Results</button>
-                  </form>
-            </div>
-            </div>
-            <footer class="footer">
-                  <p><kbd>Created & Design by Jake, Anusha, Anwal and Clifford</kbd></p>
-            </footer>
+                  {% if show_table %}
+                      <div class="card">
+                            <div class="card-body display-2 text-center">{{ records }}</div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                            <div class="card-body">
+                                  <img src="{{ image }}" class="img-fluid mx-auto"/>
+                            </div>
+                      </div>
+                      
+                      <hr>
+                      
+                      <form action="{{url_for('download_file', filename=f_name)}}" method = "GET">
+                            <button type="submit" class="btn btn-primary btn-block">Download Results</button>
+                      </form>
+                </div>
+                </div>
+                {% endif %}
+           
             
       </div>
+     <hr>
+     <hr>
+     
 </body>
+<div>
+  <footer class="footer">
+    <p><kbd>Created & Design by Jake, Anusha, Anwar and Clifford</kbd></p>
+</footer>
+</div>
+
 <script src="/static/js/main.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#predicted_table').DataTable({
+      "scorllX": true,
+      "scrollY": 500
+      
+     
+      
+    });
+    $('.dataTables_length').addClass('bs-select');
+  });
+  
+</script>
 </html>
