--- a/source/templates/createAccount.html
+++ b/source/templates/createAccount.html
@@ -11,7 +11,8 @@
     <div class="form_wrapper">
         <div class="form_container">
           <div class="title_container">
-            <h2>Create New Account</h2>
+            <h2>Credit default prediction</h2>
+            <h3>Create New Account</h3>
           </div>
           <div class="row clearfix">
             <div class="">
