--- a/source/templates/login.html
+++ b/source/templates/login.html
@@ -12,7 +12,8 @@
       <div class="form_wrapper">
           <div class="form_container">
             <div class="title_container">
-              <h2>User Login</h2>
+              <h2>Credit default prediction</h2>
+              <h3>User Login</h3>
             </div>
             <div class="row clearfix">
               <div class="">
