--- a/source/templates/Main.html
+++ b/source/templates/Main.html
@@ -6,17 +6,29 @@
       <title>Default Detection</title>
     
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-      <link rel="stylesheet" href="/static/css/main.css">
+      <link rel="stylesheet" href="/static/css/predPage.css">
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap4.min.css" />
+      <link rel="stylesheet" href="https://cdn.datatables.net/1.11.2/css/dataTables.bootstrap4.min.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+      <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+      <script src="https://cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
+      <script src="https://cdn.datatables.net/1.11.2/js/dataTables.bootstrap4.min.js"></script>
+
 </head>
 
 <body>
       <div class="container">
+            <nav class="navbar navbar-light bg-light">
+                  <span class="navbar-brand mb-0 h1">Welcome {{ g.username }}</span>
+                  <span class="text-right">
+                        <form action="{{ url_for('logout') }}" method = "post">
+                              <button type="submit" class="btn btn-outline-danger">Logout</button>
+                        </form>
+                  </span>
+            </nav>
             <div class="jumbotron text-center">
                   <h1>Credit Card Default Detection</h1>
                   <p>A Machine Learning Model Approach</p>
@@ -27,22 +39,22 @@
                   <div class="col-8">
               
                   {% if show_table %}
-                      <table id="predicted_table" class="table  table-striped table-bordered table-sm" cellspacing="0", width="100%">
-                        <thead>
+                      <table id="predicted_table" class="table  table-striped table-bordered dataTable" cellspacing="0", width="100%">
+                        <thead class="text-center">
                           <tr>
                               <th  class="th-sm">Id</th>
                               <th  class="th-sm">Age</th>
-                              <th  class="th-sm">Bill Amount1</th>
-                              <th  class="th-sm">Limit Balance</th>
+                              <th  class="th-sm">Bill Amount ($)</th>
+                              <th  class="th-sm">Limit Balance ($)</th>
                               <th  class="th-sm">Default</th>
-                              <th  class="th-sm">probability</th>
+                              <th  class="th-sm">Probability</th>
                           </tr>
                       </thead>
                           
                           <tbody>
                             
                               {% for index, row in table.iterrows() %}
-                                <tr>
+                                <tr class="text-center">
                                     <td >{{row['ID']}}</td>
                                     <td>{{row['AGE']}}</td>
                                     <td>{{row['BILL_AMT1']}}</td>
@@ -67,9 +79,10 @@
                         <div class="custom-file mb-4">
                               <input type="file" class="custom-file-input" id="fileUpload" name="file">
                               <label class="custom-file-label" for="customFile">Choose file</label>
+                              <small class="text-muted">*support only .xlsx</small>
                         </div>
                         <br>
-                        
+                        <br>
                         <button type="submit" class="btn btn-info btn-block btn-sm form-control">Predict</button>
                         
                   </form>
@@ -77,9 +90,13 @@
                   {% if show_table %}
                       <div class="card">
                             <div class="card-body display-2 text-center">{{ records }}</div>
+                            <div class="text-center">
+                                  <p>Records Predicted</p>
+                            </div>
                       </div>
                       <hr>
                       <div class="card">
+                            <div class="card-header text-center">Default vs No Default</div>
                             <div class="card-body">
                                   <img src="{{ image }}" class="img-fluid mx-auto"/>
                             </div>
@@ -87,6 +104,15 @@
                       
                       <hr>
                       
+                      <div class="card">
+                            <div class="card-header text-center">Defaulters by Probability</div>
+                            <div class="card-body">
+                                  <img src="{{ image2 }}" class="img-fluid mx-auto"/>
+                            </div>
+                      </div>
+                      
+                      <hr>
+
                       <form action="{{url_for('download_file', filename=f_name)}}" method = "GET">
                             <button type="submit" class="btn btn-primary btn-block">Download Results</button>
                       </form>
@@ -96,28 +122,15 @@
            
             
       </div>
-     <hr>
-     <hr>
-     
+      <hr>
+      <hr>
+      <div>
+            <footer class="footer">
+                  <p><kbd>Created & Design by Jake, Anusha, Anwar and Clifford</kbd></p>
+            </footer>
+      </div>
 </body>
-<div>
-  <footer class="footer">
-    <p><kbd>Created & Design by Jake, Anusha, Anwar and Clifford</kbd></p>
-</footer>
-</div>
+
 
 <script src="/static/js/main.js"></script>
-<script>
-  $(document).ready(function() {
-    $('#predicted_table').DataTable({
-      "scorllX": true,
-      "scrollY": 500
-      
-     
-      
-    });
-    $('.dataTables_length').addClass('bs-select');
-  });
-  
-</script>
 </html>
