$ symbol added, heading name change

--- a/source/templates/default_prediction.html
+++ b/source/templates/default_prediction.html
@@ -230,7 +230,7 @@ overflow-y: auto;
                         <tr>
                             <th  class="th-sm">Id</th>
                             <th  class="th-sm">Age</th>
-                            <th  class="th-sm">Bill Amount1</th>
+                            <th  class="th-sm">Outstanding</th>
                             <th  class="th-sm">Limit Balance</th>
                             <th  class="th-sm">Default</th>
                             <th  class="th-sm">probability</th>
