--- a/source/templates/Main.html
+++ b/source/templates/Main.html
@@ -44,8 +44,8 @@
                           <tr>
                               <th  class="th-sm">Id</th>
                               <th  class="th-sm">Age</th>
-                              <th  class="th-sm">Bill Amount ($)</th>
-                              <th  class="th-sm">Limit Balance ($)</th>
+                              <th  class="th-sm">Outstanding</th>
+                              <th  class="th-sm">Limit Balance</th>
                               <th  class="th-sm">Default</th>
                               <th  class="th-sm">Probability</th>
                           </tr>
