--- a/source/templates/login.html
+++ b/source/templates/login.html
@@ -12,7 +12,7 @@
       <div class="form_wrapper">
           <div class="form_container">
             <div class="title_container">
-              <h2>Credit default prediction</h2>
+              <h2>Credit Default Detection</h2>
               <h3>User Login</h3>
             </div>
             <div class="row clearfix">
