--- a/templates/createAccount.html
+++ b/templates/createAccount.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Register</title>
     <link rel="stylesheet" href="/static/css/main.css">
+    
     <script src="https://use.fontawesome.com/a0361cad77.js"></script>
 </head>
     <body>
@@ -39,7 +40,7 @@
                   <input type="text" name="organization" id="organization" placeholder="Your Organization (where applicable)"  />
                 </div>
 
-                <div class="input_field radio_option">
+                <div class="input_field radio_option" style="text-align:center;">
                   <input type="radio" name="accType" id="rd1" value="Individual">
                   <label for="rd1">Individual</label>
                   <input type="radio" name="accType" id="rd2" value="Business" checked>
@@ -47,8 +48,10 @@
                 </div>
 
                 <input class="button" type="submit" value="Create Account" /><br>
+                <div style="text-align:center;">
                 <br><a href={{ url_for('login') }} method="post">Already have an account? Login here</a><br><br>
-                <p>{{message}}{{name}}</p>
+                <p style="color:red; text-align:center;">{{message}}{{name}}</p>
+                </div>
               </form>
             </div>
           </div>
